# labbench-cli

./: LICENSE  NOTICE  PYPI_README.md  README.md  agent.py  config.py  context.py  labbench.py  pyproject.toml  subagent.py  tools.py
.github/workflows/: publish-pypi.yml
docs/: architecture.md  contributor_guide.md
docs/diagrams/: end_to_end_flow.mmd  permission_model.mmd  puppeteer-config.json  runtime_components.mmd
memory/: context.py  types.py
skill/: builtin.py  loader.py
tests/: test_compaction.py  test_skills.py
